bring back history service deployment

--- a/.github/workflows/deploy_backend_aws_dev.yml
+++ b/.github/workflows/deploy_backend_aws_dev.yml
@@ -80,8 +80,6 @@ jobs:
             EMAIL_VERIFICATION_SECRET=${{ secrets.EMAIL_VERIFICATION_SECRET }}
             NM_MAIL=${{ secrets.NM_MAIL }}
             NM_PASS=${{ secrets.NM_PASS }}
-            CLOUD_URL=${{ vars.FRONTEND_URL }}
-            DATABASE_URL=${{ secrets.DATABASE_URL }}
 
       - name: Build, tag, and push ${{ env.USER_CONTAINER_NAME }} image to Amazon ECR
         uses: docker/build-push-action@v5
@@ -128,6 +126,31 @@ jobs:
       #       fi
       #   shell: bash
 
+      - name: Build, tag, and push ${{ env.HISTORY_CONTAINER_NAME }} image to Amazon ECR
+        # if: steps.check-event-bus-changes == 'true'
+        uses: docker/build-push-action@v5
+        with:
+          context: backend/${{ env.HISTORY_CONTAINER_NAME }}
+          push: true
+          tags: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.HISTORY_CONTAINER_NAME }}
+          build-args: |
+            NODE_ENV=${{ vars.BUILD_ENV }}
+            LOG_LEVEL=${{ vars.LOG_LEVEL }}
+            CORS_ALLOWED_ORIGINS=${{ secrets.CORS_ALLOWED_ORIGINS }}
+            DATABASE_URL=${{ secrets.DATABASE_URL }}
+
+      # - name: Check for Changes in event-bus directory
+      #   id: check-event-bus-changes
+      #   run: |
+      #       if git diff --quiet HEAD~1 -- database/${{ env.EVENT_BUS_CONTAINER_NAME }}; then
+      #           echo "No changes in event-bus directory"
+      #           echo "changes=false" >> "$GITHUB_OUTPUT"
+      #       else
+      #           echo "Changes detected in event-bus directory"
+      #           echo "changes=true" >> "$GITHUB_OUTPUT"
+      #       fi
+      #   shell: bash
+
       - name: Build, tag, and push ${{ env.EVENT_BUS_CONTAINER_NAME }} image to Amazon ECR
         # if: steps.check-event-bus-changes == 'true'
         uses: docker/build-push-action@v5
@@ -143,7 +166,8 @@ jobs:
     needs: build
     strategy:
       matrix:
-        service: [
+        service:
+          [
             {
               name: question-service,
               ecs_service: peerprep-development-ServiceQuestion,
@@ -174,11 +198,11 @@ jobs:
               ecs_service: peerprep-development-ServiceEventBus,
               ecs_task_def: peerprep-development-TaskDefinitionEventBus,
             },
-            # {
-            #   name: history-service,
-            #   ecs_service:  peerprep-development-ServiceHistory,
-            #   ecs_task_def: peerprep-development-TaskDefinitionHistory
-            # },
+            {
+              name: history-service,
+              ecs_service: peerprep-development-ServiceHistory,
+              ecs_task_def: peerprep-development-TaskDefinitionHistory,
+            },
           ]
 
     steps:
