--- a/.github/workflows/deploy_backend_aws_prod.yml
+++ b/.github/workflows/deploy_backend_aws_prod.yml
@@ -89,7 +89,20 @@ jobs:
             NODE_ENV=${{ vars.BUILD_ENV }}
             LOG_LEVEL=${{ vars.LOG_LEVEL }}
             CORS_ALLOWED_ORIGINS=${{ secrets.CORS_ALLOWED_ORIGINS }}
-            MATCHING_TIMEOUT=${{ vars.MATCHING_TIMEOUT }}
+            MATCHING_TIMEOUT=${{ vars.MATCHING_TIMEOUT }} 
+            EVENT_BUS_CONTAINER_NAME=${{ env.EVENT_BUS_CONTAINER_NAME }}
+
+      - name: Check for Changes in auth-service directory
+        id: check-auth-service-changes
+        run: |
+          if git diff --quiet HEAD~1 -- backend/${{ env.AUTH_CONTAINER_NAME }}; then
+              echo "No changes in auth-service directory"
+              echo "changes=false" >> "$GITHUB_OUTPUT"
+          else
+              echo "Changes detected in auth-service directory"
+              echo "changes=true" >> "$GITHUB_OUTPUT"
+          fi
+        shell: bash
 
       - name: Build, tag, and push ${{ env.AUTH_CONTAINER_NAME }} image to Amazon ECR
         if: steps.check-auth-service-changes.outputs.changes == 'true'
@@ -106,8 +119,6 @@ jobs:
             EMAIL_VERIFICATION_SECRET=${{ secrets.EMAIL_VERIFICATION_SECRET }}
             NM_MAIL=${{ secrets.NM_MAIL }}
             NM_PASS=${{ secrets.NM_PASS }}
-            CLOUD_URL=${{ vars.FRONTEND_URL }}
-            DATABASE_URL=${{ secrets.DATABASE_URL }}
 
       - name: Check for Changes in user-service directory
         id: check-user-service-changes
@@ -160,6 +171,18 @@ jobs:
             CORS_ALLOWED_ORIGINS=${{ secrets.CORS_ALLOWED_ORIGINS }}
             REDIS_URL=${{ secrets.COLLABORATION_CACHE_URL }}
             EVENT_BUS_CONTAINER_NAME=${{ env.EVENT_BUS_CONTAINER_NAME }}
+
+      - name: Check for Changes in collaboration-cache directory
+        id: check-collaboration-cache-changes
+        run: |
+          if git diff --quiet HEAD~1 -- database/${{ env.COLLABORATION_CACHE_CONTAINER_NAME }}; then
+              echo "No changes in collaboration-cache directory"
+              echo "changes=false" >> "$GITHUB_OUTPUT"
+          else
+              echo "Changes detected in collaboration-cache directory"
+              echo "changes=true" >> "$GITHUB_OUTPUT"
+          fi
+        shell: bash
 
       - name: Build, tag, and push ${{ env.COLLABORATION_CACHE_CONTAINER_NAME }} image to Amazon ECR
         if: steps.check-collaboration-cache-changes == 'true'
@@ -221,7 +244,8 @@ jobs:
     needs: build
     strategy:
       matrix:
-        service: [
+        service:
+          [
             {
               name: question-service,
               ecs_service: peerprep-production-ServiceQuestion,
@@ -249,14 +273,14 @@ jobs:
             },
             {
               name: event-bus,
-              ecs_service: peerprep-development-ServiceEventBus,
-              ecs_task_def: peerprep-development-TaskDefinitionEventBus,
+              ecs_service: peerprep-production-ServiceEventBus,
+              ecs_task_def: peerprep-production-TaskDefinitionEventBus,
             },
-            # {
-            #   name: history-service,
-            #   ecs_service:  peerprep-production-ServiceHistory,
-            #   ecs_task_def: peerprep-production-TaskDefinitionHistory
-            # },
+            {
+              name: history-service,
+              ecs_service: peerprep-production-ServiceHistory,
+              ecs_task_def: peerprep-production-TaskDefinitionHistory,
+            },
           ]
 
     steps:
