--- a/.github/workflows/deploy_backend_aws_dev.yml
+++ b/.github/workflows/deploy_backend_aws_dev.yml
@@ -11,6 +11,7 @@ env:
 
   QUESTION_CONTAINER_NAME: question-service
   MATCHING_CONTAINER_NAME: matching-service
+  MATCHING_CACHE_CONTAINER_NAME: matching-cache
   AUTH_CONTAINER_NAME: auth-service
   USER_CONTAINER_NAME: user-service
   COLLABORATION_CONTAINER_NAME: collaboration-service
@@ -65,6 +66,14 @@ jobs:
             CORS_ALLOWED_ORIGINS=${{ secrets.CORS_ALLOWED_ORIGINS }}
             MATCHING_TIMEOUT=${{ vars.MATCHING_TIMEOUT }} 
             EVENT_BUS_CONTAINER_NAME=${{ env.EVENT_BUS_CONTAINER_NAME }}
+      
+      - name: Build, tag, and push ${{ env.MATCHING_CACHE_CONTAINER_NAME }} image to Amazon ECR
+        uses: docker/build-push-action@v5
+        with:
+          context: database/${{ env.MATCHING_CACHE_CONTAINER_NAME }}
+          push: true
+          tags: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.MATCHING_CACHE_CONTAINER_NAME }}
+
 
       - name: Build, tag, and push ${{ env.AUTH_CONTAINER_NAME }} image to Amazon ECR
         uses: docker/build-push-action@v5
@@ -117,18 +126,7 @@ jobs:
           context: database/${{ env.COLLABORATION_CACHE_CONTAINER_NAME }}
           push: true
           tags: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.COLLABORATION_CACHE_CONTAINER_NAME }}
-                    
-      # - name: Check for Changes in history directory
-      #   id: check-history-changes
-      #   run: |
-      #       if git diff --quiet HEAD~1 -- backend/${{ env.HISTORY_CONTAINER_NAME }}; then
-      #           echo "No changes in history directory"
-      #           echo "changes=false" >> "$GITHUB_OUTPUT"
-      #       else
-      #           echo "Changes detected in history directory"
-      #           echo "changes=true" >> "$GITHUB_OUTPUT"
-      #       fi
-      #   shell: bash
+                  
 
       - name: Build, tag, and push ${{ env.HISTORY_CONTAINER_NAME }} image to Amazon ECR
         uses: docker/build-push-action@v5
